# IndoorPointCloudViewer

./: .gitignore  CMakeLists.txt  README.md  basic_methods.cpp  main.cpp  ply2txt.py  preprocess.cpp  preprocess_methods.cpp  py_methods.py  run.py
3Dengine/: thirdperson.uproject
3Dengine/Config/: DefaultEngine.ini  DefaultGame.ini
3Dengine/Content/ThirdPersonBP/: Compass_Marker.uasset  Compass_Objective.uasset  Compass_Points.uasset  Objective_Blue.uasset  Objective_Red.uasset  Objective_yellow.uasset  buleMAT1.uasset  no.uasset  redMAT1.uasset  sphere.uasset  yellowMAT.uasset
3Dengine/Content/ThirdPersonBP/Blueprints/: 629055.uasset  ActorToReceiveText.uasset  ArchCharacterPNG.uasset  ArchCharacterPNG2.uasset  ArchCharacterPNG3.uasset  ArchCharacterPNG5.uasset  ArchCharacterPNG6.uasset  ArchCharacterPNG7.uasset  ArchCharacterPNG9.uasset  CameraSetting.uasset  Character_Ref.uasset  Compass.uasset  DebugPawn.uasset  FreePawn.uasset  HUD.uasset  Main.umap  MainMenu.uasset  Main_BuiltData.uasset  NewTextureRenderTarget2D.uasset  PauseMenu.uasset  PikPng_com_wasd-png_1982691.uasset  Rooms.uasset  ThirdPersonCharacter.uasset  ThirdPersonGameMode.uasset  (+6 more)
3Dengine/Content/fonts/: Calibri_Regular.uasset  Calibri_Regular_Font.uasset
data/: VRR_rest_nonarchi_B.ply
data/meshes/: mesh_file_generated_here.txt
data/pointclouds/: POINTCLOUDS_rest_nonarchi_A.ply  POINTCLOUDS_rest_nonarchi_A.txt  POINTCLOUDS_rest_nonarchi_B.ply  put_your_input_point_cloud_here.txt
data/voxels/: voxel_file_generated_here.txt
voxeliser/: Face.h  Point.h  Rows.h  VoxelGrid.h  Workflow.h
(+15 files in other folders)
